--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/3bc482648a.js" crossorigin="anonymous"></script>
-    <title>Title App</title>  <!-- HERE ADD TITLE -->
+    <title>Task Simple Manager</title>  <!-- HERE ADD TITLE -->
   </head>
   <body>
     <div id="root"></div>
